--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           node-version: 20
       - name: Install dependencies
+        working-directory: ./webapp
         run: yarn install
       - name: Lint project
+        working-directory: ./webapp
         run: yarn lint
