--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,15 @@ jobs:
       - name: Lint project
         working-directory: ./webapp
         run: yarn lint
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build Docker Image
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+          tags: jorritvanhooren/webapp:latest
