--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,13 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Build Docker Image
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
-          push: false
+          push: true
           tags: jorritvanhooren/webapp:latest
